Add managed disk creation workflow
